<resources>
  <string name="app_name">LibraryHelper</string>
  <string name="main_activity_action_bar_scan_title">Scan</string>
  <string name="activity_main_button_add_title">Add</string>
  <string name="activity_main_button_remove_title">Remove</string>
  <string name="activity_main_button_search_title">Search</string>
  <string name="activity_main_button_lend_title">Lending</string>
  <string name="main_activity_action_bar_settings_title">Settings</string>


  <string name="preference_server_settings_remote_url_title">Remote server</string>
  <string name="preference_server_settings_remote_url_summary">The remote server is currently \'%s\'.</string>

  <string name="preference_server_settings_remote_port_title">Remote server port</string>
  <string name="preference_server_settings_remote_port_summary">The remote server port is currently \'%s\'.</string>

  <string name="preference_server_settings_cat_ip">Server ip Settings</string>
  <string name="preference_server_settings_cat_endpoint">Endpoint settings</string>
  <string name="preference_server_settings_cat_account">Account settings</string>


  <string name="preference_server_settings_endpoint_search_title">Search endpoint path</string>
  <string name="preference_server_settings_endpoint_search_summary">The search path on the server is \'%s\'.</string>

  <string name="preference_server_settings_endpoint_delete_title">Delete endpoint path</string>
  <string name="preference_server_settings_endpoint_delete_summary">The delete path on the server is \'%s\'.</string>

  <string name="preference_server_settings_endpoint_add_title">Add endpoint path</string>
  <string name="preference_server_settings_endpoint_add_summary">The add path on the server is \'%s\'.</string>

  <string name="preference_server_settings_endpoint_cover_summary">The path for cover images on the server is \'%s\'.</string>
  <string name="preference_server_settings_endpoint_cover_title">Cover images endpoint path</string>

  <string name="preference_server_settings_endpoint_lending_title">Lending endpoint path</string>
  <string name="preference_server_settings_endpoint_lending_summary">The lending path on the server is \'%s\'.</string>

  <string name="preference_server_settings_endpoint_login_title">Login endpoint path</string>
  <string name="preference_server_settings_endpoint_login_summary">The login path on the server is \'%s\'.</string>

  <string name="preference_server_settings_endpoint_modify_title">Modify endpoint path</string>
  <string name="preference_server_settings_endpoint_modify_summary">The modify path on the server is \'%s\'.</string>

  <string name="preference_server_settings_account_username_title">Username</string>
  <string name="preference_server_settings_account_username_summary">The selected username is \'%s\'.</string>
  <string name="preference_server_settings_account_password_title">Password</string>
  <string name="preference_server_settings_account_password_summary">The password to use for authentication. This will be stored in plaintext on your phone, sooo…</string>


  <string name="add_fragment_added_book_toast">Successfully added the book</string>
  <string name="add_fragment_error_adding_book_title">An error occurred adding the book</string>
  <string name="add_fragment_server_refused">The server refused to add the book.</string>
  <string name="add_fragment_isbn_lookup_error">Error looking up the book information. Adding might still work.</string>

  <string name="invalid_isbn">Invalid ISBN!</string>
  <string name="isbn_input_fragment_enter_isbn_hint">ISBN…</string>
  <string name="isbn_input_fragment_accept_button_title">Accept!</string>
  <string name="fragment_isbn_input_action_bar_scan_title">Scan</string>

  <string name="delete_fragment_confirm_tite">Confirm deletion</string>
  <string name="delete_fragment_confirm_message">Do you really want to do that?</string>
  <string name="delete_fragment_confirm_button_no">No</string>
  <string name="delete_fragment_confirm_button_yes">Yes</string>
  <string name="delete_fragment_confirm_button_yes_to_all">Yes to all</string>
  <string name="delete_fragment_error_deleting_book_title">Error deleting a book</string>
  <string name="delete_fragment_book_deleted">Successfully deleted the book</string>
  <string name="delete_fragment_server_refused_deletion">Server said no.</string>

  <string name="fragment_query_execute_button_text">Execute!</string>
  <string name="query_field_isbn_name">ISBN</string>
  <string name="query_field_title_name">Title</string>
  <string name="query_field_author_name">Author</string>
  <string name="query_field_location_name">Location</string>
  <string name="search_type_wildcard_name">Wildcard</string>
  <string name="search_type_regex_name">Regular Expression</string>
  <string name="search_type_exact_match_name">Exact match</string>
  <string name="search_type_fuzzy_name">Fuzzy match</string>
  <string name="fragment_query_input_hint">Query…</string>

  <string name="lend_fragment_received_book_back">Successfully removed the borrower.</string>
  <string name="lend_fragment_server_refused">Server refused deletion</string>
  <string name="lend_fragment_input_borrower_title">Lending</string>
  <string name="lend_fragment_input_borrower_message">Please input the name of the borrower:</string>
  <string name="lend_fragment_lent_book">Successfully lent the book.</string>
  <string name="lend_fragment_error_lending_book">Error lending book</string>
  <string name="lend_fragment_choice_dialog_title">Lending a book</string>
  <string name="lend_fragment_choice_dialog_message">Do you want to lend it or receive it back?</string>
  <string name="lend_fragment_choice_dialog_receive">Receive</string>
  <string name="lend_fragment_choice_dialog_lend">Lend</string>

  <string name="book_add_preview_fragment_add_book">Add Book</string>

  <string name="book_detail_layout_context_menu_copy_value">Copy value</string>
  <string name="book_detail_layout_placeholder_title">Book data loading.</string>

  <string name="server_response_malformed">The response is malformed: \'%s\'</string>
  <string name="server_response_body_is_null">Body is null</string>
  <string name="server_response_malformed_misses_key">The server response does not contain the key \'%s\'.</string>
  <string name="server_response_malformed_not_a_json_primitive">The server did not respond with a valid json object. Expected a primitive.</string>
  <string name="server_response_unknown_error">Unknown error: \'%s\'</string>
  <string name="server_response_timeout">The connection timed out.</string>
  <string name="server_response_error_received">Server returned an error: \'%s\'</string>


  <string name="settings_server_url_not_well_formed">The server url is not well formed.</string>
  <string name="lorem_ipsum_dolor_sit_amet">Lorem Ipsum, dolor sit amet.</string>
  <string name="query_fragment_error_querying_server_title">Error performing query</string>
  <string name="empty_view">This list is empty.</string>
  <string name="content_description_book_cover_image">Cover image</string>

  <string name="book_data_key_publisher_name">Publisher</string>
  <string name="book_data_key_url_name">Url</string>
  <string name="book_data_key_title_name">Title</string>
  <string name="book_data_key_isbn_name">Isbn</string>
  <string name="book_data_key_description_name">Description</string>
  <string name="book_data_key_rating_name">Rating</string>
  <string name="book_data_key_language_name">Language</string>
  <string name="book_data_key_authors_name">Authors</string>
  <string name="book_data_key_price_name">Price</string>


  <string name="error_fetching_jwt_title">Error while authenticating</string>
  <string name="error_fetching_jwt_message_username_not_set">There is no username set in the settings.</string>
  <string name="error_fetching_jwt_message_password_not_set">There is no password set in the settings.</string>
  <string name="fetched_jtw_title">Authentication successful</string>
  <string name="error_fetching_jwt">Authentication unsuccessful</string>
  <string name="input_new_value">Input new value…</string>
</resources>
